--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,15 @@ header .nav-menu, header a:hover {
 
 .top-section {
   margin: 15px auto;
-  width: 800px;
+  width: 750px;
   padding: 15px;
   text-align: center;
-  border-width: 5px;
-  border-color: #fbdb4a;
-  border-style: solid;
-  border-radius: 10%;
+  border-radius: 5%;
+  background-image: url("/assets/jk-9gfGDbxuqrU-unsplash.jpg");
+}
+
+.top-section .ntf-mercia {
+  border-radius: 5%;
 }
 
 .top-text {
