--- a/css/style.scss
+++ b/css/style.scss
@@ -1,68 +1,114 @@
 
 
-
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    min-width: 485px;
+    
 }
 
-.avatar{
-    border-radius: 50%;
-    height: 150px;
-    width: 150px;
+h1 {
+
+    //font-family: 'Sacramento', cursive, sans-serif;
+    text-shadow:2px 2px #fbdb4a;
+    font-size: 50px;
+    padding-top: 30px;
 }
+
 
 a {
  color:black;
  text-decoration: none;
- padding: 0.3em;
-}
+ }
 
+li {
+    list-style: none;
+}
+span{
+    font-family: 'Sacramento', cursive, sans-serif;
+    font-size: 50px;
+}
 
 header {
     display:flex;
     background-color: #fbdb4a;
     justify-content: space-between;
-    max-width: 100%;
-    overflow-y: hidden;
     overflow-x: hidden;
-    margin: auto;
+    height: fit-content;
     
-    .nav-menu, a {
-       padding-top: 75px;
-       padding-right: 25px;
-       font-weight: normal;
-       
-        
+    .avatar {
+        height: 150px;
+        width: 150px;
     }
 
-    .nav-menu, a:hover{
-        color: rgb(97, 147, 160);
+    nav {
+        padding-top: 50px;
+        padding-right: 25px;
+        a {
+            padding-left: 10px;
+            padding-right: 10px;
+            font-weight: bold;
+        }
+
+    }
+    a:hover{
+        opacity: .7;
         font-weight: bold;
+        font-size:large;
     }
 
-
 }
-
-
+.motto {
+font-size: 40px;
+font-family: 'Sacramento', cursive;
+padding: 0;
+margin: 0;
+font-weight: bold;
+}
 .top-section{
-    margin: 15px auto;
-    width: 750px;
-    padding: 15px;
-    text-align: center; 
-    border-radius: 5%;
-    background-image: url("/assets/jk-9gfGDbxuqrU-unsplash.jpg");
     
-    
-    .ntf-mercia{
-        border-radius: 5%;
-    }
-    }
+    background-image: url('/assets/j-kosinska-RE-8WswW95o-unsplash.jpg');
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: wrap;
+    width: 100%;
+    text-align: center;
 
-.top-text{
-    animation: yourAnimation 2s forwards 0s ease-in-out;
+    
 }
+    
+   
+
+
+
+
+.middle-section {
+    
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    padding: 15px;
+
+  }
+.mid-top{
+    padding: 15px;
+    margin:auto;
+}
+.mid-bottom{
+    padding: 15px;
+    margin: auto;
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -78,6 +124,24 @@ header {
         }
 }
 
+.top-text{
+    animation: yourAnimation 2s forwards 0s ease-in-out;
+}
+
+@keyframes yourAnimation2{
+    0%{
+        transform: translateY(-20%);
+        opacity: 0;
+        }
+    100%{
+        transform: rotate(xx) translateY(0);
+        opacity: 1;
+        }
+}
+
+.ntf-mercia{
+    animation: yourAnimation2 1s forwards 0s ease;
+}
 
 
 
