--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 h1 {
+  font-family: 'Sacramento', cursive, sans-serif;
   text-shadow: 2px 2px #fbdb4a;
   font-size: 50px;
   padding-top: 30px;
