--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ header a:hover {
 
 .top-section {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   background-image: url("/assets/j-kosinska-RE-8WswW95o-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -102,12 +102,15 @@ header a:hover {
 }
 
 .top-section .top-right {
-  padding-top: 5em;
+  max-width: 75%;
 }
 
 .top-section .ntf-mercia {
   -webkit-animation: yourAnimation2 1.5s forwards 0s ease-in-out;
           animation: yourAnimation2 1.5s forwards 0s ease-in-out;
+  height: 300px;
+  margin-top: -30px;
+  padding: 0;
 }
 
 .top-section .top-text {
@@ -132,14 +135,15 @@ header a:hover {
 }
 
 .mid-top {
-  padding: 15px;
+  margin-top: -85px;
   font-size: larger;
 }
 
 .mid-top p {
-  max-width: 50%;
-  width: 400px;
+  max-width: 75%;
+  width: 500px;
   margin: auto;
+  padding: 30px;
 }
 
 .mid-bottom {
@@ -151,7 +155,7 @@ header a:hover {
 }
 
 .mid-bottom .container {
-  max-width: 40%;
+  max-width: 75%;
   width: 600px;
   margin: 50px auto;
   height: 50%;
@@ -160,6 +164,14 @@ header a:hover {
   background-color: #e6e4e4;
   -webkit-box-shadow: 1px 1px #969696;
           box-shadow: 1px 1px #969696;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 500px;
+          flex: 0 0 500px;
+}
+
+.mid-bottom .container h1 {
+  padding-top: 25px;
+  margin: 0;
 }
 
 .the-why {
@@ -170,7 +182,9 @@ header a:hover {
 .my-services {
   width: 75%;
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  margin-top: -30px;
 }
 
 .my-services .services-box {
